# hibiki-discord

./: .gitignore  CHANGELOG.md  LLMGUIDE.md  README.md  hibiki-discord.toml  pyproject.toml
hibiki_discord/: __init__.py  config.py  service.py
tests/: test_config.py  test_service.py
